--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -626,7 +626,6 @@ h1 * {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-height: 100vh;
   padding-bottom: 50px;
 }
 
@@ -804,7 +803,7 @@ nav {
 }
 
 .headerCenter {
-  min-height: 50vh;
+  margin: 100px 0;
   min-width: 60%;
   width: 100%;
   display: flex;
@@ -953,7 +952,6 @@ h1 span {
 
 .categories {
   background-color: #EFF6F3;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1065,7 +1063,6 @@ h1 span {
   flex-direction: column;
   align-items: center;
   padding: 100px 0;
-  min-height: 100vh;
 }
 .howItWorks .howToSteps {
   width: 100%;
@@ -1107,7 +1104,7 @@ h1 span {
   min-width: 200px;
 }
 .howItWorks .howToTalent {
-  padding: 100px 0;
+  padding-top: 100px;
   min-height: 750px;
 }
 .howItWorks .howToLeft {
@@ -1139,7 +1136,6 @@ h1 span {
 
 .jobGuides {
   background-color: #EFF6F3;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1229,7 +1225,7 @@ h1 span {
 .jobGuidesBottom {
   display: flex;
   justify-content: space-between;
-  padding: 150px 0;
+  padding-top: 100px;
 }
 
 .cvUploadLeft {
@@ -2810,7 +2806,6 @@ h1 {
 
 .dashboardSection {
   background-color: #EFF6F3;
-  min-height: 100vh;
   display: flex;
 }
 .dashboardSection .dashboardWrapper {
@@ -2826,6 +2821,10 @@ h1 {
   min-width: 10%;
 }
 
+.dashboardNavButton {
+  display: none;
+}
+
 .dashboardContainer {
   position: relative;
   height: 100%;
@@ -2837,6 +2836,7 @@ h1 {
 .dashboardContainer .dashboardNav {
   position: sticky;
   top: 0;
+  left: 0;
   padding: 30px 5px;
   background-color: white;
   width: 15%;
@@ -3258,6 +3258,7 @@ h1 {
 }
 @media screen and (max-width: 1000px) {
   .showNavButton {
+    cursor: pointer;
     display: block;
     position: fixed;
     z-index: 1000;
@@ -3265,20 +3266,60 @@ h1 {
     top: 0;
     padding: 0;
     margin: 25px 50px;
-    background-color: #EFF6F3;
+    background-color: transparent;
     border-radius: 10px;
     border: none;
-    color: #00BF58;
+    color: #00BF58 !important;
   }
   .showNavButton:active {
-    background-color: #755146;
     color: white;
+  }
+  .showNavButton:hover {
+    color: #755146 !important;
   }
   .showNavButton svg {
     font-size: 3rem;
   }
   div.navWrapper {
     position: relative;
+  }
+  .dashboardContainer .dashboardNavHidden {
+    transition: all 0.3s linear;
+    position: fixed;
+    left: -20%;
+    visibility: hidden;
+    z-index: 100;
+  }
+  .dashboardContainer .dashboardNavVisible {
+    visibility: visible;
+    transition: all 0.3s linear;
+    position: fixed;
+    z-index: 100;
+  }
+  .dashboardNavButton {
+    visibility: visible;
+    display: block;
+    position: absolute;
+    z-index: 1000;
+    right: -30px;
+    padding: 30px 0;
+    top: 45%;
+    background-color: transparent;
+    border-radius: 10px;
+    border: none;
+    color: #00bf58;
+    transition: all 0.1s linear;
+    cursor: pointer;
+  }
+  .dashboardNavButton svg {
+    font-size: 2.5rem;
+    transition: all 0.2s linear;
+  }
+  .dashboardNavButton:hover {
+    transform: scale(1.5);
+  }
+  .dashClosed svg {
+    transform: rotate(180deg);
   }
   nav:not(nav.dashboardNav, nav.MuiPagination-root) {
     visibility: visible;
