--- a/src/styles/layout/_howItWorks.scss
+++ b/src/styles/layout/_howItWorks.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: 100px 0;
-  min-height: 100vh;
+  // min-height: 100vh;
   .howToSteps {
     width: 100%;
     display: flex;
@@ -46,7 +46,7 @@
     min-width: 200px;
   }
   .howToTalent {
-    padding: 100px 0;
+    padding-top: 100px ;
     min-height: 750px;
   }
   .howToLeft {
