--- a/src/styles/mediaQueries/_950-1100.scss
+++ b/src/styles/mediaQueries/_950-1100.scss
@@ -10,6 +10,7 @@
   //   padding-top: 100px;
   // }
   .showNavButton {
+    cursor: pointer;
     display: block;
     position: fixed;
     z-index: 1000;
@@ -18,14 +19,17 @@
     padding: 0;
     margin: 25px 50px;
     // width: 200px;
-    background-color: $greenBg;
+    background-color: transparent;
     border-radius: 10px;
     border: none;
-    color: $lightGreen;
+    color: $lightGreen !important;
     &:active {
-      background-color: $brown;
+      // background-color: $brown;
       // border: 1px solid transparent;
       color: white;
+    }
+    &:hover {
+      color: $brown !important;
     }
     svg {
       font-size: 3rem;
@@ -35,6 +39,48 @@
   }
   div.navWrapper {
     position: relative;
+  }
+  .dashboardContainer {
+    .dashboardNavHidden {
+      transition: all 0.3s linear;
+      position: fixed;
+      left: -20%;
+      visibility: hidden;
+      z-index: 100;
+    }
+    .dashboardNavVisible {
+      visibility: visible;
+      transition: all 0.3s linear;
+      position: fixed;
+      z-index: 100;
+    }
+  }
+  .dashboardNavButton {
+    visibility: visible;
+    display: block;
+    position: absolute;
+    z-index: 1000;
+    right: -30px;
+    padding: 30px 0;
+    top: 45%;
+    background-color: transparent;
+    border-radius: 10px;
+    border: none;
+    color: #00bf58;
+    transition: all 0.1s linear;
+    cursor: pointer;
+    svg {
+      font-size: 2.5rem;
+      transition: all 0.2s linear;
+    }
+    &:hover {
+      transform: scale(1.5);
+    }
+  }
+  .dashClosed {
+    svg {
+      transform: rotate(180deg);
+    }
   }
   nav:not(nav.dashboardNav, nav.MuiPagination-root) {
     visibility: visible;
@@ -52,12 +98,12 @@
     // .navLogo {
     //   display: flex;
     //   justify-content: flex-start;
-      // position: absolute;
-      // left: 5%;
-      // top: 25px;
-      // img {
-        // margin-right: 50px;
-      // }
+    // position: absolute;
+    // left: 5%;
+    // top: 25px;
+    // img {
+    // margin-right: 50px;
+    // }
     // }
     .navMenu {
       flex-direction: column;
@@ -104,7 +150,6 @@
     }
   }
   .mainNav .navLogo {
-    
   }
   nav.slidingNav {
   }
@@ -134,9 +179,8 @@
       right: 50px;
     }
   }
-    .jobDetails {
+  .jobDetails {
     flex-direction: column-reverse;
-   
   }
   // .annoyingLink {
   //   display: none;
@@ -177,5 +221,4 @@
       text-align: center;
     }
   }
-
 }
