--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -281,7 +281,7 @@ a {
 
 img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .wrapper {
@@ -2858,7 +2858,6 @@ h1 {
 .dashboardContainer .avatar .avatarImage {
   height: 80px;
   width: 80px;
-  background-color: black;
   border-radius: 50%;
   margin-bottom: 10px;
 }
@@ -2936,6 +2935,12 @@ h1 {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+.dashboardContainer .dashboardContent label.buttonSquareLimeGreen {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  padding: 7px 15px;
 }
 .dashboardContainer .dashboardContent select {
   border-color: rgb(170, 170, 170);
@@ -3091,7 +3096,6 @@ h1 {
 .myProfileBio .bioImage {
   width: 50px;
   height: 50px;
-  background-color: black;
   border-radius: 50%;
 }
 .myProfileBio .bioBio {
