--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -53,7 +53,6 @@
     .avatarImage {
       height: 80px;
       width: 80px;
-      background-color: black;
       border-radius: 50%;
       margin-bottom: 10px;
     }
@@ -132,6 +131,12 @@
       justify-content: space-between;
       align-items: center;
       width: 100%;
+    }
+    label.buttonSquareLimeGreen {
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      padding: 7px 15px;
     }
     select {
       border-color: $darkGrey;
@@ -289,7 +294,6 @@
   .bioImage {
     width: 50px;
     height: 50px;
-    background-color: black;
     border-radius: 50%;
   }
   .bioBio {
