--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -252,6 +252,7 @@ template {
 html {
   font-size: 125%;
   scroll-behavior: smooth;
+  overflow-y: scroll;
   min-height: 100vh;
 }
 
@@ -2535,12 +2536,12 @@ h1 {
   cursor: pointer;
   transition: all 0.1s linear;
   position: relative;
-  background-color: #EFF6F3;
+  background-color: white;
 }
 .jobCard:hover {
   border: 1px solid #244034;
   transform: scale(1.003);
-  background-color: white;
+  background-color: #EFF6F3;
 }
 .jobCard .jobCardHeading {
   display: flex;
@@ -2552,7 +2553,7 @@ h1 {
   width: 50px;
   height: 50px;
   margin-right: 20px;
-  background-color: #EFF6F3;
+  background-color: transparent;
 }
 .jobCard .jobCardLogo img {
   border-radius: 5px;
@@ -2826,6 +2827,7 @@ h1 {
 }
 
 .dashboardContainer {
+  width: 100%;
   position: relative;
   height: 100%;
   min-height: 50vh;
@@ -2855,11 +2857,16 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+.dashboardContainer .avatar p {
+  text-align: center;
+}
 .dashboardContainer .avatar .avatarImage {
   height: 80px;
   width: 80px;
+  margin-bottom: 20px;
+}
+.dashboardContainer .avatar .avatarImage img {
   border-radius: 50%;
-  margin-bottom: 10px;
 }
 .dashboardContainer .dashboardOptions {
   width: 100%;
@@ -3049,7 +3056,6 @@ h1 {
   background-color: white;
   height: auto;
   max-height: 800px;
-  overflow: auto;
 }
 
 .myProfileBio .bioPhoto {
@@ -3096,6 +3102,8 @@ h1 {
 .myProfileBio .bioImage {
   width: 50px;
   height: 50px;
+}
+.myProfileBio .bioImage img {
   border-radius: 50%;
 }
 .myProfileBio .bioBio {
@@ -3305,7 +3313,7 @@ h1 {
     display: block;
     position: absolute;
     z-index: 1000;
-    right: -30px;
+    right: -50px;
     padding: 30px 0;
     top: 45%;
     background-color: transparent;
@@ -3320,7 +3328,17 @@ h1 {
     transition: all 0.2s linear;
   }
   .dashboardNavButton:hover {
-    transform: scale(1.5);
+    color: #755146;
+    transform: scale(1.3);
+  }
+  .dashNavCheckbox:checked + label {
+    right: -20px;
+    border: none;
+  }
+  .dashNavCheckbox:checked + label:hover {
+    background-color: transparent;
+    color: #755146;
+    transform: scale(1.3);
   }
   .dashClosed svg {
     transform: rotate(180deg);
