--- a/src/styles/mediaQueries/_950-1100.scss
+++ b/src/styles/mediaQueries/_950-1100.scss
@@ -60,7 +60,7 @@
     display: block;
     position: absolute;
     z-index: 1000;
-    right: -30px;
+    right: -50px;
     padding: 30px 0;
     top: 45%;
     background-color: transparent;
@@ -74,7 +74,17 @@
       transition: all 0.2s linear;
     }
     &:hover {
-      transform: scale(1.5);
+      color: $brown;
+      transform: scale(1.3);
+    }
+  }
+  .dashNavCheckbox:checked + label {
+    right: -20px;
+    border: none;
+    &:hover {
+      background-color: transparent;
+      color: $brown;
+      transform: scale(1.3);
     }
   }
   .dashClosed {
