--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -17,10 +17,11 @@
     }
   }
 }
-  .dashboardNavButton {
-    display: none;
-  }
+.dashboardNavButton {
+  display: none;
+}
 .dashboardContainer {
+  width: 100%;
   position: relative;
   height: 100%;
   min-height: 50vh;
@@ -50,11 +51,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    p {
+      text-align: center;
+    }
     .avatarImage {
       height: 80px;
       width: 80px;
-      border-radius: 50%;
-      margin-bottom: 10px;
+
+      margin-bottom: 20px;
+      img {
+        border-radius: 50%;
+      }
     }
   }
   .dashboardOptions {
@@ -246,7 +253,7 @@
   background-color: white;
   height: auto;
   max-height: 800px;
-  overflow: auto;
+  
 }
 
 .myProfileBio {
@@ -294,7 +301,9 @@
   .bioImage {
     width: 50px;
     height: 50px;
-    border-radius: 50%;
+    img {
+      border-radius: 50%;
+    }
   }
   .bioBio {
     display: flex;
