--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -252,11 +252,11 @@
   cursor: pointer;
   transition: all 0.1s linear;
   position: relative;
-  background-color: $greenBg;
+  background-color: white;
   &:hover {
     border: 1px solid $darkGreen;
     transform: scale(1.003);
-    background-color: white;
+    background-color: $greenBg;
   }
   .jobCardHeading {
     display: flex;
@@ -268,7 +268,7 @@
     width: 50px;
     height: 50px;
     margin-right: 20px;
-    background-color: $greenBg;
+    background-color: transparent;
     img {
       border-radius: 5px;
     }
