--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -3298,7 +3298,7 @@ h1 {
   .dashboardContainer .dashboardNavHidden {
     transition: all 0.3s linear;
     position: fixed;
-    left: -20%;
+    left: -20vh;
     visibility: hidden;
     z-index: 100;
   }
@@ -3313,7 +3313,7 @@ h1 {
     display: block;
     position: absolute;
     z-index: 1000;
-    right: -50px;
+    right: -35px;
     padding: 30px 0;
     top: 45%;
     background-color: transparent;
@@ -3329,7 +3329,7 @@ h1 {
   }
   .dashboardNavButton:hover {
     color: #755146;
-    transform: scale(1.3);
+    transform: scale(1.1);
   }
   .dashNavCheckbox:checked + label {
     right: -20px;
@@ -3338,7 +3338,7 @@ h1 {
   .dashNavCheckbox:checked + label:hover {
     background-color: transparent;
     color: #755146;
-    transform: scale(1.3);
+    transform: scale(1.1);
   }
   .dashClosed svg {
     transform: rotate(180deg);
@@ -3437,9 +3437,13 @@ h1 {
   }
 }
 @media screen and (max-width: 950px) {
+  .categories .categoriesCards {
+    justify-content: center;
+  }
   .categories .categoriesCards li {
     width: calc(50% - 20px);
     height: 350px;
+    min-width: 330px;
     margin-bottom: 40px;
     flex-direction: column;
     justify-content: center;
@@ -3624,6 +3628,275 @@ h1 {
     width: 100%;
     justify-content: center;
     margin-top: 40px;
+  }
+  .dashboardContainer .dashboardSummary {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .dashboardContainer .dashboardStats {
+    flex-wrap: wrap;
+  }
+  .dashboardContainer .dashboardStats li {
+    width: calc(50% - 10px);
+  }
+  .dashboardContainer .summaryChart,
+  .dashboardContainer .recentlyApplied {
+    width: 100%;
+    margin: 10px 0 20px 0;
+  }
+  .postSkills p {
+    display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  .headerSearchContainer {
+    flex-direction: column;
+  }
+  .headerSearchContainer .headerSearchLeft,
+  .headerSearchContainer .headerSearchMiddle,
+  .headerSearchContainer .headerSearchRight {
+    width: 100%;
+    margin: 10px 0;
+  }
+  .headerSearchContainer .headerSearchLeft {
+    border-bottom: 1px solid rgb(170, 170, 170);
+  }
+  .headerSearchContainer .headerSearchMiddle {
+    border-bottom: 1px solid rgb(170, 170, 170);
+    padding: 0;
+  }
+  .headerSearchContainer .headerSearchRight button {
+    width: 100%;
+  }
+  .headerSearchContainer select {
+    padding: 10px 0;
+  }
+  .headerSearchContainer select option {
+    padding: 5px 0;
+  }
+  .headerSearchContainer input[type=text] {
+    padding: 10px 0;
+  }
+  .mainHeader .companyUserLogos div {
+    padding: 0 5px;
+  }
+  .categories .categoriesExplore {
+    text-align: center;
+    justify-content: center;
+  }
+  .categories .categoriesExplore a {
+    display: none;
+  }
+  .reviewsCard {
+    width: 80%;
+  }
+  .categories .categoriesCards li {
+    padding: 0;
+    height: 230px;
+  }
+  .footerBottomLeft {
+    display: none;
+  }
+  .footerBottomRight {
+    width: 160px;
+  }
+  .jobsHolder {
+    justify-content: center;
+  }
+  .jobsHolder a {
+    width: 100%;
+  }
+  .jobCard .jobCardLogo {
+    display: block;
+  }
+  .filtersBottom {
+    justify-content: center;
+  }
+  .filtersBottom .filtersType {
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .filtersBottom .filtersType p {
+    width: 100px;
+  }
+  .filtersBottom .filtersExperience {
+    width: 100%;
+    justify-content: center;
+  }
+  .filtersBottom .filtersExperience p {
+    width: 100px;
+  }
+  .filtersBottom .filtersSalary {
+    width: 100%;
+  }
+  .filtersBottom .typeGroup,
+  .filtersBottom .experienceGroup {
+    width: 200px;
+    margin-left: 20px;
+  }
+  .pricingCards .cents {
+    right: 20px;
+  }
+  .pricingCards .dollarSign {
+    left: 20px;
+  }
+  .myProfileBio .bioImage {
+    display: none;
+  }
+  .companyInfo {
+    flex-direction: column;
+  }
+  .companyInfo .companyEmail, .companyInfo .companySite, .companyInfo .companyDate, .companyInfo .companySize, .companyInfo .companyNumber, .companyInfo .companyCategory {
+    width: 100%;
+  }
+  .myProfileBio, .myProfileSocials, .myProfileLocation {
+    max-height: none;
+  }
+  .deletePhoto {
+    display: none;
+  }
+  .myProfileForm .addressMiddle {
+    flex-direction: column;
+  }
+  .myProfileForm .addressMiddle div {
+    width: 100%;
+  }
+  .dashboardContainer .dashboardStats li {
+    width: 100%;
+  }
+  .postMix {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .postMix .postSkills {
+    justify-content: center;
+  }
+  .postMix .postCategory,
+  .postMix .postType,
+  .postMix .postSalary,
+  .postMix .postExperience {
+    width: auto;
+  }
+}
+@media screen and (max-width: 600px) {
+  .mainHeader h1 * {
+    font-size: 2.3rem;
+  }
+  .reviewsCard {
+    width: 100%;
+  }
+  .footerLogo {
+    display: none;
+  }
+  .footerTopHalf div:nth-child(3) {
+    display: none;
+  }
+  .footerTop .footerTopHalf {
+    justify-content: space-evenly;
+  }
+  .newsletterInputs input {
+    min-width: 100px;
+  }
+  .faqLink {
+    text-align: center;
+  }
+  .categories .categoriesCards li {
+    min-width: 270px;
+  }
+  .navMenu {
+    width: 170px;
+  }
+  header span {
+    text-align: center;
+  }
+  .filtersTop {
+    flex-direction: column;
+  }
+  .filtersTop .filtersKeyword,
+  .filtersTop .filtersCategories,
+  .filtersTop .filtersLocation {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .filtersBottom .typeGroup,
+  .filtersBottom .experienceGroup {
+    width: 200px;
+  }
+  .filtersBottom .typeGroup div,
+  .filtersBottom .experienceGroup div {
+    margin-bottom: 10px;
+  }
+  .filtersBottom .filtersSalary {
+    flex-direction: column;
+    align-items: center;
+  }
+  .salaryGroup {
+    margin-top: 20px;
+  }
+  .filterButtons {
+    flex-direction: column-reverse;
+  }
+  .filterButtons button {
+    margin-top: 20px;
+  }
+  .filtersBottom .filtersExperience,
+  .filtersBottom .filtersType {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .filtersBottom .filtersExperience p,
+  .filtersBottom .filtersType p {
+    margin-bottom: 20px;
+  }
+  .jobsSort p {
+    display: none;
+  }
+  .jobDetailsRight .jobDetailsCompanyBottom .companyDetails div {
+    width: 100%;
+  }
+  .pricingCards li {
+    min-width: 290px;
+  }
+  .pricingCards .cents {
+    right: 0;
+  }
+  .pricingCards .dollarSign {
+    left: 0;
+  }
+  .contactTypes {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .contactTypes li {
+    margin-bottom: 50px;
+  }
+  .contactUs .contactUsTop {
+    flex-direction: column;
+  }
+  .contactUs .contactUsName, .contactUs .contactUsEmail {
+    width: 100%;
+  }
+  .dashboardContainer .dashboardContent {
+    padding: 30px 5px;
+  }
+  .popupActive .logoutReminder {
+    width: 310px;
+  }
+  .loginMain, .signupMain {
+    padding: 40px 15px;
+    width: 310px;
+  }
+  .loginMain .loginOptions {
+    flex-direction: column;
+  }
+  .loginMain .loginOptions a {
+    margin-top: 20px;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu .slideOut {
+    width: 170px;
   }
 }
 
