--- a/src/styles/mediaQueries/_950-1100.scss
+++ b/src/styles/mediaQueries/_950-1100.scss
@@ -35,8 +35,7 @@
       font-size: 3rem;
     }
   }
-  .hideNavButton {
-  }
+
   div.navWrapper {
     position: relative;
   }
@@ -44,12 +43,14 @@
     .dashboardNavHidden {
       transition: all 0.3s linear;
       position: fixed;
-      left: -20%;
+      left: -20vh;
       visibility: hidden;
+      // display: none;
       z-index: 100;
     }
     .dashboardNavVisible {
       visibility: visible;
+      // display: block;
       transition: all 0.3s linear;
       position: fixed;
       z-index: 100;
@@ -60,7 +61,7 @@
     display: block;
     position: absolute;
     z-index: 1000;
-    right: -50px;
+    right: -35px;
     padding: 30px 0;
     top: 45%;
     background-color: transparent;
@@ -72,10 +73,11 @@
     svg {
       font-size: 2.5rem;
       transition: all 0.2s linear;
+
     }
     &:hover {
       color: $brown;
-      transform: scale(1.3);
+      transform: scale(1.1);
     }
   }
   .dashNavCheckbox:checked + label {
@@ -84,7 +86,7 @@
     &:hover {
       background-color: transparent;
       color: $brown;
-      transform: scale(1.3);
+      transform: scale(1.1);
     }
   }
   .dashClosed {
@@ -159,10 +161,7 @@
       margin-right: 50px;
     }
   }
-  .mainNav .navLogo {
-  }
-  nav.slidingNav {
-  }
+
   .navWrapper nav.hideNav {
     right: -100%;
     visibility: hidden;
@@ -205,18 +204,25 @@
   }
 }
 @media screen and (max-width: 950px) {
-  .categories .categoriesCards li {
-    width: calc(100% / 2 - 20px);
-    height: 350px;
-    margin-bottom: 40px;
-    flex-direction: column;
+  .categories .categoriesCards {
+
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    .finalCardIcons {
-      display: none;
+    li {
+      width: calc(100% / 2 - 20px);
+      height: 350px;
+      min-width: 330px;
+      margin-bottom: 40px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      .finalCardIcons {
+        display: none;
+      }
     }
   }
+  
+
   .footerTop {
     flex-direction: column-reverse;
     justify-content: center;
