--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -1540,7 +1540,6 @@ span.fakeTextBreaks {
   flex-direction: column;
   align-items: center;
   width: 450px;
-  height: 600px;
 }
 .loginMain h2,
 .loginMain p,
@@ -1618,7 +1617,7 @@ span.fakeTextBreaks {
   border: 2px solid transparent;
   border-radius: 10px;
   font-size: 0.8rem;
-  padding: 5px 10px;
+  padding: 10px;
 }
 .loginMain .popupForm label {
   font-size: 0.7rem;
@@ -1738,7 +1737,6 @@ span.fakeTextBreaks {
   flex-direction: column;
   align-items: center;
   width: 450px;
-  height: 600px;
 }
 .signupMain h2,
 .signupMain h3,
@@ -1838,7 +1836,7 @@ span.fakeTextBreaks {
   border: none;
   border-radius: 10px;
   font-size: 0.8rem;
-  padding: 3px 10px;
+  padding: 10px;
   outline: none;
   border: 2px solid transparent;
 }
@@ -1863,7 +1861,7 @@ span.fakeTextBreaks {
 }
 .signupMain .accountType {
   width: 100%;
-  height: 30px;
+  height: 35px;
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
@@ -1874,7 +1872,7 @@ span.fakeTextBreaks {
 .signupMain .accountType .slider {
   position: absolute;
   width: 50%;
-  height: 30px;
+  height: 35px;
   border-radius: 20px;
   background-color: #00BF58;
   z-index: 5;
@@ -2936,7 +2934,8 @@ h1 {
 .dashboardContainer .dashboardContent label {
   font-size: 0.8rem;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 2px;
   padding: 3px;
   display: flex;
   justify-content: space-between;
@@ -3147,6 +3146,7 @@ h1 {
   bottom: 40px;
   left: 50%;
   text-transform: uppercase;
+  transform: translate(-50%, 50%);
 }
 
 .hiddenButton {
@@ -3260,7 +3260,34 @@ h1 {
 .companyInfo .companySize label,
 .companyInfo .companyNumber label,
 .companyInfo .companyCategory label {
-  margin: 10px 0;
+  margin: 20px 0 2px 0;
+}
+
+.css-zw3mfo-MuiModal-root-MuiDialog-root {
+  padding: 3%;
+}
+.css-zw3mfo-MuiModal-root-MuiDialog-root #alert-dialog-title {
+  text-align: center;
+}
+
+div.MuiDialogActions-root {
+  display: flex;
+  justify-content: center;
+}
+div.MuiDialogActions-root button {
+  margin: 30px;
+  padding: 10px 20px;
+  background-color: #244034;
+  color: white;
+}
+div.MuiDialogActions-root button:hover {
+  background-color: #755146;
+}
+
+span.reviewSpan {
+  font-size: 1rem !important;
+  color: black !important;
+  display: block;
 }
 
 @media screen and (max-width: 1100px) {
