--- a/src/styles/layout/_login.scss
+++ b/src/styles/layout/_login.scss
@@ -32,7 +32,6 @@
   flex-direction: column;
   align-items: center;
   width: 450px;
-  height: 600px;
   h2,
   p,
   .remember,
@@ -108,7 +107,7 @@
       border: 2px solid transparent;
       border-radius: 10px;
       font-size: 0.8rem;
-      padding: 5px 10px;
+      padding: 10px;
     }
     label {
       font-size: 0.7rem;
