--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -94,9 +94,19 @@
     margin-top: 10px;
     border: none;
     border-radius: 10px;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     padding: 5px;
   }
+}
+.filtersCategories select {
+  min-width: 230px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  padding: 5px;
+  background-color: white;
+  width: calc(100% / 3 - 30px);
 }
 .filtersType,
 .filtersExperience,
@@ -105,7 +115,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     font-weight: bold;
   }
   input:checked {
@@ -324,27 +334,27 @@
     width: 110px;
   }
 }
-  .popupActive .loginReminder {
-    width: 410px;
-    border-radius: 20px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 180px;
-    background-color: white;
-    p {
-      color: black;
-    }
-    div {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .buttonRoundClear {
-      color: black;
-      border-color: black;
-    }
+.popupActive .loginReminder {
+  width: 410px;
+  border-radius: 20px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 180px;
+  background-color: white;
+  p {
+    color: black;
   }
+  div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .buttonRoundClear {
+    color: black;
+    border-color: black;
+  }
+}
