--- a/src/styles/mediaQueries/_600.scss
+++ b/src/styles/mediaQueries/_600.scss
@@ -1,9 +1,8 @@
 @use "../base/variables" as *;
 
 @media screen and (max-width: 600px) {
-
   .headerSearchContainer {
-   flex-direction: column;
+    flex-direction: column;
     .headerSearchLeft,
     .headerSearchMiddle,
     .headerSearchRight {
@@ -20,15 +19,15 @@
     .headerSearchRight button {
       width: 100%;
     }
-     select {
+    select {
       padding: 10px 0;
-       option {
+      option {
         padding: 5px 0;
-       }
-     } 
-     input[type=text] {
+      }
+    }
+    input[type="text"] {
       padding: 10px 0;
-     }
+    }
   }
   .mainHeader .companyUserLogos div {
     padding: 0 5px;
@@ -39,13 +38,13 @@
     a {
       display: none;
     }
-  } 
+  }
   .reviewsCard {
     width: 80%;
   }
   .categories .categoriesCards li {
-    padding: 0;
-    height: 230px;
+    padding: 40px 0;
+    height: 300px;
   }
   .footerBottomLeft {
     display: none;
@@ -62,6 +61,22 @@
   .jobCard .jobCardLogo {
     display: block;
   }
+  .filtersKeyword,
+  .filtersCategories,
+  .filtersLocation {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .jobCard .jobCardLocation {
+    flex-direction: column-reverse;
+    .bottomText {
+      display: block;
+      margin-bottom: 5px;
+    }
+  } 
+  .filtersCategories select {
+    width: 100%;
+  }
   .filtersBottom {
     justify-content: center;
     .filtersType {
@@ -75,7 +90,7 @@
     .filtersExperience {
       width: 100%;
       justify-content: center;
-            p {
+      p {
         width: 100px;
       }
     }
@@ -100,10 +115,17 @@
   .companyInfo {
     flex-direction: column;
   }
-  .companyInfo .companyEmail, .companyInfo .companySite, .companyInfo .companyDate, .companyInfo .companySize, .companyInfo .companyNumber, .companyInfo .companyCategory {
+  .companyInfo .companyEmail,
+  .companyInfo .companySite,
+  .companyInfo .companyDate,
+  .companyInfo .companySize,
+  .companyInfo .companyNumber,
+  .companyInfo .companyCategory {
     width: 100%;
   }
-  .myProfileBio, .myProfileSocials, .myProfileLocation {
+  .myProfileBio,
+  .myProfileSocials,
+  .myProfileLocation {
     max-height: none;
   }
   .deletePhoto {
@@ -114,7 +136,7 @@
     div {
       width: 100%;
     }
-  } 
+  }
   .dashboardContainer .dashboardStats li {
     width: 100%;
   }
@@ -130,5 +152,9 @@
     .postExperience {
       width: auto;
     }
+  }
+  .loginMain,
+  .signupMain {
+    width: 80%;
   }
 }
