--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -196,3 +196,11 @@
 .scrollHidden {
   visibility: hidden;
 }
+.saveJobButton {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    color: $lightGreen;
+  }
+}
