--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -492,3 +492,10 @@ span.reviewSpan {
   color: black !important;
   display: block;
 }
+.savedJobs {
+  width: 100%;
+  padding: 30px;
+  h2 {
+    margin-bottom: 30px;
+  }
+}
