--- a/src/styles/mediaQueries/_600.scss
+++ b/src/styles/mediaQueries/_600.scss
@@ -77,6 +77,9 @@
   .subMenuTitle svg {
     transform: rotate(90deg);
   }
+  .navMenu li {
+    margin-right: 30px;
+  }
   nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu {
     height: 500px;
     flex-direction: column;
@@ -171,6 +174,6 @@
   }
   .loginMain,
   .signupMain {
-    width: 80%;
+    width: 90%;
   }
 }
