bookmark color bug

--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -204,6 +204,6 @@
     color: $lightGreen;
   }
 }
-.savedJob svg {
-  background-color: $lightGreen;
-}
+// .savedJob svg {
+//   background-color: $lightGreen;
+// }
